Ship P1 wizard/Giter8 track: kotlin-cli, git templates, type-ahead libs.
Add kotlin-cli.g8 (templates + classpath), Giter8Git for owner/repo and
HTTPS clones, filterable multi-select library picker wired to the catalog,
and expand NewJkBuildRenderer to accept catalog short names and free-form GAVs.